???

  * Fixed: Include path order bug
      Thanks to Ed Schouten for reporting this!
  * Fixed: Shadow builds now possible
      Thanks to Adeodato Simó for the patch!
  * Added: Version guards for Autoconf/Automake
      Thanks to Martin Michlmayr for reporting!

2007-09-17 -- 0.6.0

  * Fixed: Proper soname updates from now on, starting at 1:0:0
  * Removed: Visual Studio 2003 project files

2007-09-13 -- 0.5.2

  * Added: RemoveBaseUri function to create URI references
  * Added: Unix/Windows filename <--> URI string conversion helpers
  * Added: EscapeEx function to escape text blocks without zero termination
  * Fixed: Bug in ToString for URIs with scheme, path, but no host (e.g. "f:/.//g")
  * Fixed: AddBase now resolves ".//g" with base "f:/a" to "f:/.//g" instead of
      "f://g" which would result in "g" becoming the authority part when parsing
      a recomposition (ToString) of that URI structure. This is a whole in RFC 3986,
      see http://lists.w3.org/Archives/Public/uri/2007Aug/0003.html for details.

2007-08-09 -- 0.5.1

  * Fixed: Empty host bug (URIs like "///g")
  * Fixed: Relative URIs are no longer touched by normalization
  * Fixed: MergePath failed for empty paths
  * Fixed: Bug with "." segments in AddBase
      All of the above revealed by test cases from 4Suite (http://4suite.org/)

2007-07-28 -- 0.5.0

  * Added: Syntax-based normalization
  * Added: Percent-encoding function Escape
  * Improved: Malloc/NULL checks added
  * Added: New function UnescapeInPlaceEx can also decode '+' to ' '
      and convert line breaks
  * Added: Exact space computation for ToString, see ToStringCharsRequired
  * Added: --enable-sizedown for saving space and slower code
  * Fixed: Two internal functions were exposed in the API by mistake:
      uriPushToStack and uriStackToOctet
  * Added: Visual Studio 2005 project files
  * Removed: Legacy code (removal was announced for 0.5.0)

2007-07-06 -- 0.4.1
