@@ -1,5 +1,8 @@
 ???
 
+  * Fixed: Percent-encodings in hostnames were not
+      repaired during normalization.
+      Thanks to Adrian Manrique for reporting!
   * Fixed: Include path order bug
       Thanks to Ed Schouten for reporting this!
   * Fixed: Shadow builds now possible
